sdk-docs_versioned_docs/version-19.0.0/enums/Generated/Types/SettlementTx/SettlementTx.md
---
id: "SettlementTx"
title: "Enumeration: SettlementTx"
sidebar_label: "SettlementTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).SettlementTx

## Enumeration Members

### AddAndAffirmInstruction

• **AddAndAffirmInstruction** = ``"settlement.addAndAffirmInstruction"``

#### Defined in

[generated/types.ts:621](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L621)

___

### AddAndAffirmInstructionWithMemo

• **AddAndAffirmInstructionWithMemo** = ``"settlement.addAndAffirmInstructionWithMemo"``

#### Defined in

[generated/types.ts:636](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L636)

___

### AddInstruction

• **AddInstruction** = ``"settlement.addInstruction"``

#### Defined in

[generated/types.ts:620](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L620)

___

### AddInstructionWithMemo

• **AddInstructionWithMemo** = ``"settlement.addInstructionWithMemo"``

#### Defined in

[generated/types.ts:635](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L635)

___

### AffirmInstruction

• **AffirmInstruction** = ``"settlement.affirmInstruction"``

#### Defined in

[generated/types.ts:622](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L622)

___

### AffirmWithReceipts

• **AffirmWithReceipts** = ``"settlement.affirmWithReceipts"``

#### Defined in

[generated/types.ts:625](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L625)

___

### AllowVenues

• **AllowVenues** = ``"settlement.allowVenues"``

#### Defined in

[generated/types.ts:629](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L629)

___

### ChangeReceiptValidity

• **ChangeReceiptValidity** = ``"settlement.changeReceiptValidity"``

#### Defined in

[generated/types.ts:631](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L631)

___

### ClaimReceipt

• **ClaimReceipt** = ``"settlement.claimReceipt"``

#### Defined in

[generated/types.ts:626](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L626)

___

### CreateVenue

• **CreateVenue** = ``"settlement.createVenue"``

#### Defined in

[generated/types.ts:617](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L617)

___

### DisallowVenues

• **DisallowVenues** = ``"settlement.disallowVenues"``

#### Defined in

[generated/types.ts:630](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L630)

___

### ExecuteManualInstruction

• **ExecuteManualInstruction** = ``"settlement.executeManualInstruction"``

#### Defined in

[generated/types.ts:637](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L637)

___

### ExecuteScheduledInstruction

• **ExecuteScheduledInstruction** = ``"settlement.executeScheduledInstruction"``

#### Defined in

[generated/types.ts:632](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L632)

___

### RejectInstruction

• **RejectInstruction** = ``"settlement.rejectInstruction"``

#### Defined in

[generated/types.ts:624](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L624)

___

### RescheduleInstruction

• **RescheduleInstruction** = ``"settlement.rescheduleInstruction"``

#### Defined in

[generated/types.ts:633](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L633)

___

### SetVenueFiltering

• **SetVenueFiltering** = ``"settlement.setVenueFiltering"``

#### Defined in

[generated/types.ts:628](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L628)

___

### UnclaimReceipt

• **UnclaimReceipt** = ``"settlement.unclaimReceipt"``

#### Defined in

[generated/types.ts:627](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L627)

___

### UpdateVenueDetails

• **UpdateVenueDetails** = ``"settlement.updateVenueDetails"``

#### Defined in

[generated/types.ts:618](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L618)

___

### UpdateVenueSigners

• **UpdateVenueSigners** = ``"settlement.updateVenueSigners"``

#### Defined in

[generated/types.ts:634](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L634)

___

### UpdateVenueType

• **UpdateVenueType** = ``"settlement.updateVenueType"``

#### Defined in

[generated/types.ts:619](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L619)

___

### WithdrawAffirmation

• **WithdrawAffirmation** = ``"settlement.withdrawAffirmation"``

#### Defined in

[generated/types.ts:623](https://github.com/PolymeshAssociation/polymesh-sdk/blob/5a778578/src/generated/types.ts#L623)
